# arba-evnt

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
cmake/config/: package-config.cmake.in
cmake/scripts/: quick_install.cmake
example/: CMakeLists.txt  event_box_example.cpp  event_manager_example.cpp
example/basic_cmake_project/: CMakeLists.txt  main.cpp
include/arba/evnt/: async_event_queue.hpp  event_box.hpp  event_info.hpp  event_listener.hpp  event_manager.hpp  evnt.hpp  signal.hpp
include/arba/evnt/priv/: simple_signal.hpp
src/: async_event_queue.cpp  event_box.cpp  event_manager.cpp
src/arba/evnt/: async_event_queue.cpp  event_box.cpp  event_manager.cpp
test/: CMakeLists.txt  event_box_tests.cpp  event_manager_tests.cpp  project_version_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
